@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.1.7
 ----------------------------------------------------------------------
-   7 Enhancements
+   8 Enhancements
    6 Bug fixes
    3 Localisation updates
 ----------------------------------------------------------------------
@@ -17,6 +17,9 @@
 
   - Allow scripts to run in console mode
   https://sourceforge.net/p/omegat/feature-requests/994/ 
+
+  - Colour themes (e.g., light/dark GUI modes)
+  https://sourceforge.net/p/omegat/feature-requests/958/
 
   Other enhancements:
 
